--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -138,18 +138,16 @@
                         </div>
 
                         <div class="col-sm-6">
-                            <div class="form-group">
-                                <label>Garantía:</label>
-                                <select id="garantia" class="form-control" asp-for="Input.Garantia" required>
-                                    <option value="0">Seleccione</option>
-                                    @foreach (var item in Model.Garantias)
-                                    {
-                                        <option value="@item.idSAP">@item.Nombre</option>
-                                    }
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
+                            @*<div class="form-group">
+            <label>Garantía:</label>
+            <select id="garantia" class="form-control" asp-for="Input.Garantia" required>
+                <option value="0">Seleccione</option>
+                @foreach (var item in Model.Garantias)
+                {
+                    <option value="@item.idSAP">@item.Nombre</option>
+                }
+            </select>
+        </div>*@
                             <div class="form-group">
                                 <label>Técnico:</label>
                                 <select id="srt" class="form-control" asp-for="Input.Tecnico" required>
@@ -160,6 +158,19 @@
                                     }
                                 </select>
                             </div>
+
+                        </div>
+                        <div class="col-sm-6">
+                            @*<div class="form-group">
+                                <label>Técnico:</label>
+                                <select id="srt" class="form-control" asp-for="Input.Tecnico" required>
+                                    <option value="0">Seleccione</option>
+                                    @foreach (var item in Model.Tecnicos)
+                                    {
+                                        <option value="@item.idSAP">@item.Nombre</option>
+                                    }
+                                </select>
+                            </div>*@
                         </div>
 
                     </div>
