--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
@@ -206,8 +206,8 @@
                         <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>DocEntry</th>
-                                <th>DocNum</th>
+                                <th>No. Llamada</th>
+                                
                                 <th>Cliente</th>
                                 <th>Item</th>
                                 <th>Asunto</th>
@@ -222,7 +222,7 @@
                                 <tr>
                                     <td>@item.id</td>
                                     <td>@item.DocEntry</td>
-                                    <td>@item.DocNum</td>
+                             
                                     <td>@item.CardCode</td>
                                     <td>@item.ItemCode - @item.SerieFabricante</td>
                                     <td>@item.Asunto</td>
@@ -245,8 +245,8 @@
                         <tfoot>
                             <tr>
                                 <th>ID</th>
-                                <th>DocEntry</th>
-                                <th>DocNum</th>
+                                <th>No. Llamada</th>
+               
 
                                 <th>Cliente</th>
                                 <th>Item</th>
