--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
@@ -47,9 +47,11 @@
 
 
 
-            $(document).ready(function () {
-                $('#tablita').DataTable();
-            });
+            //$(document).ready(function () {
+            //    $('#tablita').DataTable({
+            //        "order": [[0, "desc"]]
+            //    });
+            //});
 
 
         });
