--- a/Sicsoft.Checkin.Web/Pages/Shared/_Layout.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Shared/_Layout.cshtml
@@ -208,12 +208,12 @@
     <script src="~/css/assets/vendor/slimscroll/jquery.slimscroll.js"></script>
     <script src="~/css/assets/libs/js/main-js.js"></script>
     @*<script src="~/css/assets/vendor/charts/chartist-bundle/chartist.min.js"></script>
-    <script src="~/css/assets/vendor/charts/sparkline/jquery.sparkline.js"></script>
-    <script src="~/css/assets/vendor/charts/morris-bundle/raphael.min.js"></script>
-    <script src="~/css/assets/vendor/charts/morris-bundle/morris.js"></script>
-    <script src="~/css/assets/vendor/charts/c3charts/c3.min.js"></script>
-    <script src="~/css/assets/vendor/charts/c3charts/d3-5.4.0.min.js"></script>
-    <script src="~/css/assets/vendor/charts/c3charts/C3chartjs.js"></script>*@
+        <script src="~/css/assets/vendor/charts/sparkline/jquery.sparkline.js"></script>
+        <script src="~/css/assets/vendor/charts/morris-bundle/raphael.min.js"></script>
+        <script src="~/css/assets/vendor/charts/morris-bundle/morris.js"></script>
+        <script src="~/css/assets/vendor/charts/c3charts/c3.min.js"></script>
+        <script src="~/css/assets/vendor/charts/c3charts/d3-5.4.0.min.js"></script>
+        <script src="~/css/assets/vendor/charts/c3charts/C3chartjs.js"></script>*@
     @*<script src="~/css/assets/libs/js/dashboard-ecommerce.js"></script>*@
 
 
@@ -222,6 +222,10 @@
     <script src="~/css/assets/vendor/datatables/js/data-table.js"></script>
 
 
+    <script src="~/css/assets/vendor/jspf/jspdf.min.js"></script>
+    <script src="~/css/assets/vendor/jspf/jspdf.plugin.autotable.js"></script>
+    <script src="~/css/assets/vendor/jspf/jspdf.plugin.autotable.min.js"></script>
+    <script src="~/css/assets/vendor/html2pdf/html2pdf.bundle.js"></script>
 
     @*<script src="~/css/build/js/custom.min.js"></script>*@
 
