--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
@@ -115,7 +115,44 @@
                         }
                     });
         }
-         
+
+        function ImprimeEtiqueta(boleta, cliente) {
+            var html = '<html> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">';
+            html += '<body>'
+          
+            html += '<div class="row"> <div class="col-sm-12"> <br> </div> </div>';
+          //  html += $("#idHtml2").html();
+            html += ' <div class="row" style="text-align: center;">';
+            html += '  <div class="col-sm-1"></div>';
+            html += '  <div class="col-sm-10"> ';
+
+            html += '<h3>No. Boleta: </h3>' + '<p>'+ boleta + '</p>';
+            html += '<h4>Cliente: </h4>' + '<p>' + cliente + '</p>';
+
+            html += ' </div>';
+            html += '  <div class="col-sm-1"></div>';
+
+            html += ' </div>';
+
+            html += "</body></html>"
+            var item = html;
+
+            var opt = {
+                margin: [10, 5, 15, 5],
+                pagebreak: { before: '.cuidado' },
+
+                image: { type: 'jpeg', quality: 0.98 },
+                html2canvas: { scale: 2 },
+                jsPDF: { format: 'letter', orientation: 'portrait' }
+            };
+
+
+
+            html2pdf().set(opt)
+                .from(item)
+                .save("Boleta"+boleta+".pdf");
+        
+        }
 
     </script>
 
@@ -225,7 +262,7 @@
                                     <td>@item.id</td>
                                     <td>@item.DocEntry</td>
                              
-                                    <td>@item.CardCode</td>
+                                    <td>@item.CardCode - @Model.Clientes.Clientes.Where(a => a.CardCode == item.CardCode).FirstOrDefault().CardName</td>
                                     <td>@item.ItemCode - @item.SerieFabricante</td>
                                     <td>@item.Asunto</td>
 
@@ -237,7 +274,10 @@
                                         {
 
                                             <a onclick="javascript: enviarSAP('@item.id')" title="Enviar a SAP"> <img src="~/sap.png" style="width: 40%;height: 50%;border-radius: 30%; cursor: pointer;" /></a>
-                                        }
+                                        }&nbsp;
+                                        <button title="PDF" type="button" class="btn btn-danger" onclick="javascript: ImprimeEtiqueta('@item.DocEntry', '@item.CardCode - @Model.Clientes.Clientes.Where(a => a.CardCode == item.CardCode).FirstOrDefault().CardName')">PDF</button>
+
+
                                     </td>
                                 </tr>
                             }
